--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-immutable": "^4.0.3",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
