--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
     "immutable": "^4.1.0",
